--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
+# Python
+*.py[cod]
+__pycache__/
+*.so
+
 # Environments
+api/
 .env
 .venv/
 env/
@@ -6,3 +12,8 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
